--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <title>Nicholas Chiang</title>
 </head>
 <body>
-<i>Hello</i>, <b>world</b>!
-</body>
+  <h1>Skills</h1>
+  <h2>Running</h2>
+  <p>I really do love to run! It's a fun thing to do with your time!</p>
+  <h2>Computer Science</h2>
+  <p>I'm teaching my sisters how to code with HTML right now... yay!</p>
+  <h1>Experience</h1>
+  <ul>
+    <li>I can write code!</li>
+    <li>I have written a lot of code!</li>
+    <li>This is a list!</li>
+  </ul>
+ </body>
 </html>
