--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <p>I really do love to run! It's a fun thing to do with your time!</p>
   <h2>Computer Science</h2>
   <p>I'm teaching my sisters how to code with HTML right now... yay!</p>
+  <h3>Web Development</h3>
+  <p>I built this awesome website, it looks amazing, right?</p>
+  <h3>Machine Learning</h3>
+  <p>This is a machine learning paragraph about what I did with ML.</p>
+  <h3>Data Science</h3>
+  <p>This paragraph is all about my experience and skills regarding data science.</p>
   <h1>Experience</h1>
   <ul>
     <li>I can write code!</li>
