--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <title>Nicholas Chiang</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i&display=swap" rel="stylesheet">
+<style type="text/css">
+  body {
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+  </style>
 </head>
 <body>
   <h1>Skills</h1>
