--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   </style>
 </head>
 <body>
-  <h1>Skills</h1>
-  <h2>Running</h2>
+  <h1>Nicholas Chiang</h1>
+  <h2>Skills</h2>
+  <h3>Running</h3>
   <p>I really do love to run! It's a fun thing to do with your time!</p>
-  <h2>Computer Science</h2>
+  <h3>Computer Science</h3>
   <p>I'm teaching my sisters how to code with HTML right now... yay!</p>
-  <h3>Web Development</h3>
+  <h4>Web Development</h4>
   <p>I built this awesome website, it looks amazing, right?</p>
-  <h3>Machine Learning</h3>
+  <h4>Machine Learning</h4>
   <p>This is a machine learning paragraph about what I did with ML.</p>
-  <h3>Data Science</h3>
+  <h4>Data Science</h4>
   <p>This paragraph is all about my experience and skills regarding data science.</p>
-  <h1>Experience</h1>
+  <h2>Experience</h2>
   <ul>
     <li>I can write code!</li>
     <li>I have written a lot of code!</li>
