--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <h1>Nicholas Chiang</h1>
   <h2>Skills</h2>
   <h3>Running</h3>
-  <p>I really do love to run! It's a fun thing to do with your time!</p>
-  <h3>Computer Science</h3>
-  <p>I'm teaching my sisters how to code with HTML right now... yay!</p>
+  <p>I <i>really</i> do love to run! It's a fun thing to do with your time!</p>
+  <h3><i>Computer Science<i/></h3>
+    <p>I'm <b>teaching my sisters</b> how to code with HTML right now... yay!</p>
   <h4>Web Development</h4>
   <p>I built this awesome website, it looks amazing, right?</p>
   <h4>Machine Learning</h4>
