--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <li>I have written a lot of code!</li>
     <li>This is a list!</li>
   </ul>
+    <footer>
+      <a href="https://github.com/nicholaschiang/lesson-demo">Here</a> you can find the source code for this portfolio website! Check it out.
+    </footer>
  </body>
 </html>
