--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <style type="text/css">
   body {
     font-family: 'Roboto Condensed', sans-serif;
+   max-width: 500px;
+    margin: 25px auto;
   }
   h1 {
    font-size: 50px; 
