--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
   <p>I <i>really</i> do love to run! It's a fun thing to do with your time!</p>
   <h3><i>Computer Science<i/></h3>
     <p>I'm <b>teaching my sisters</b> how to code with HTML right now... yay!</p>
+    <p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
   <h4>Web Development</h4>
   <p>I built this awesome website, it looks amazing, right?</p>
   <h4>Machine Learning</h4>
   <p>This is a machine learning paragraph about what I did with ML.</p>
+    <p>Maxime neque inventore deserunt cumque. Et tenetur autem ullam nemo tenetur modi reiciendis. Rerum ad et et voluptatum.</p>
+<p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
+<p>Incidunt dolor quas rerum reiciendis voluptas esse. Provident eos occaecati itaque molestiae quidem id fuga. Sunt quis beatae dolorem. Dolores recusandae expedita aliquid aut.</p>
   <h4>Data Science</h4>
   <p>This paragraph is all about my experience and skills regarding data science.</p>
+    <p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
   <h2>Experience</h2>
   <ul>
-    <li>I can write code!</li>
+    <li>I can write <a href="https://github.com/nicholaschiang">code</a>!</li>
     <li>I have written a lot of code!</li>
     <li>This is a list!</li>
   </ul>
