--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
   <h2>Experience</h2>
   <ul>
-    <li>I can write <a href="https://github.com/nicholaschiang">code</a>!</li>
+    <li>I can write <a href="https://github.com/nicholaschiang" target="_blank">code</a>!</li>
     <li>I have written a lot of code!</li>
     <li>This is a list!</li>
   </ul>
     <footer>
-      <a href="https://github.com/nicholaschiang/lesson-demo">Here</a> you can find the source code for this portfolio website! Check it out.
+      <a href="https://github.com/nicholaschiang/lesson-demo" target="_blank">Here</a> you can find the source code for this portfolio website! Check it out.
     </footer>
  </body>
 </html>
