--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h2>Skills</h2>
   <h3>Running</h3>
   <p>I <i>really</i> do love to run! It's a fun thing to do with your time!</p>
-  <h3><i>Computer Science<i/></h3>
+  <h3>Computer Science</h3>
     <p>I'm <b>teaching my sisters</b> how to code with HTML right now... yay!</p>
     <p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
   <h4>Web Development</h4>
