--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style type="text/css">
   body {
     font-family: 'Roboto Condensed', sans-serif;
-   max-width: 500px;
+   max-width: 600px;
     margin: 25px auto;
   }
   h1 {
@@ -33,7 +33,7 @@
     <p>Aut porro odit est fuga cupiditate rerum qui. Iusto autem et in. Sed maiores exercitationem quod. Quasi dolorum iusto est dolor nihil molestiae voluptatem. Deleniti dolor nam dolorem. Praesentium explicabo ipsum excepturi numquam est ut.</p>
   <h2>Experience</h2>
   <ul>
-    <li>I can write <a href="https://github.com/nicholaschiang" target="_blank">code</a>!</li>
+    <li>I can write <a target="_blank" href="https://github.com/nicholaschiang">code</a>!</li>
     <li>I have written a lot of code!</li>
     <li>This is a list!</li>
   </ul>
