--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <li>I have written a lot of code!</li>
     <li>This is a list!</li>
   </ul>
-    <footer>
+  <h2>Photography</h2>
+  <img src="https://www.nicholaschiang.com/jpgs/Sophia%20Portrait.jpg" alt="Photo I took of my sister.">
+  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fhypebeast.com%2Fimage%2F2014%2F06%2Fmission-workshop-cargo-packs-0.jpg&f=1&nofb=1" alt="Photo of MW Rambler backpack.">
+  <footer>
       <a href="https://github.com/nicholaschiang/lesson-demo" target="_blank">Here</a> you can find the source code for this portfolio website! Check it out.
     </footer>
  </body>
